--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "axios": "^0.21.0",
     "echarts": "^4.9.0",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuex": "^3.6.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
